@@ -1,3 +1,9 @@
+2002-04-01  Heather Drury  <drury_h@ociweb.com>
+	* orb/CDROutputStream.java:
+	Added checks to is_recursive() within write_TypeCode() method for value, alias,
+	value_box, abstract_interface, union, enum, and except types. Fixed a bug where "No
+	recursive TC" exception was erroneously being thrown.
+
 2002-03-18  Andre Spiegel  <spiegel@gnu.org>
 
 	Patch by Francisco Reverbel <reverbel@ime.usp.br>
